--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: 'PT Sans';
+  src: url('../fonts/ptsans.woff2') format('woff2'),
+       url('../fonts/ptsans.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: ''PT Sans';
+  src: url('../fonts/ptsansbold.woff2') format('woff2'),
+       url('../fonts/ptsansbold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+, :before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
 body {
   font-size: 14px;
   line-height: 21px;
@@ -45,6 +71,60 @@ body {
   font-weight: normal;
 }
 
+.main-footer-list {
+  list-style: none;
+}
+
+.social-button {
+  background-color: #81b3d2;
+}
+
+.social-button a {
+  font-size: 0;
+}
+
+.social-button:hover {
+  background-color: #669ec0;
+}
+
+.social-button:active {
+  background-color: #5496bd;
+}
+
+.tw {
+  background-image: url("../img/twitter.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.fb {
+  background-image: url("../img/fb-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.youtube {
+  background-image: url("../img/youtube.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.developer-logo {
+  fill: #000000;
+  width: 115px;
+  height: 41px;
+}
+
+.developer-logo-link:hover .developer-logo {
+  fill: #81b3d3;
+}
+
+.developer-logo-link:active .developer-logo {
+  fill: #bdbbbc;
+}
+
+
+
 /* Main Page */
 
 .site-navigation,
@@ -53,6 +133,21 @@ body {
   line-height: 26px;
   color: #000000;
   font-weight: bold;
+
+  list-style: none;
+}
+
+.site-navigation a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.site-navigation a:hover {
+  color: #81b3d2;
+}
+
+.site-navigation a:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .features-header-title,
@@ -70,6 +165,10 @@ body {
   font-weight: normal;
 }
 
+.features-content {
+  background-color: #81b3d2;
+}
+
 .features-content-title {
   font-size: 21px;
   line-height: 21px;
@@ -77,9 +176,38 @@ body {
   font-weight: bold;
 }
 
-.number .white,
+.white,
 .features-content-text {
   color: #ffffff;
+}
+
+.features-list {
+  list-style: none;
+}
+
+.icon-house {
+  background-color: #ffffff;
+  background-image: url("../img/icon-1.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.icon-food {
+  background-color: #ffffff;
+  background-image: url("../img/icon-2.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.icon-souvenir {
+  background-color: #ffffff;
+  background-image: url("../img/icon-3.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.features-row3 {
+  background-color: #eeeeee;
 }
 
 .popup-search-text {
@@ -90,26 +218,211 @@ body {
 .button-popup-search {
   font-size: 21px;
   line-height: 26px;
-  color: #ffffff;
+  color: rgba(255, 255, 255, 1);
   font-weight: bold;
+
+  background-color: #766357;
 }
 
-.button-popup-search,
+.button-popup-search:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .popup-search-btn {
   font-size: 14px;
   line-height: 26px;
-  color: #000000;
+  color: #ffffff;
   font-weight: bold;
+
+  background-color: #81b3d2;
 }
 
+.popup-search-btn:hover {
+  background-color: #669ec0;
+}
+
+.popup-search-btn:active {
+  color: rgb(255, 255, 255, 0.3);
+  background-color: #5496bd;
+}
+
+a.popup-form-link:hover {
+  color: #000000;
+}
+
+a.popup-form-link:active {
+  color: #81b3d2;
+}
+
+.popup-form-input {
+  background-color: #f2f2f2;
+  border: 1px solid transparent;
+}
+
+.popup-form-input:hover{
+  background-color: #ebebeb;
+}
+
+.popup-form-input:focus {
+  background-color: #ffffff;
+  border-color: #f2f2f2;
+}
+
+.popup-form-plus {
+ position:relative;
+ width: 40px;
+ height: 40px;
+ border: 0;
+ padding: 0;
+ text-indent: -1000px;
+ overflow: hidden;
+ background-color: #f2f2f2;
+}
+
+.popup-form-plus:hover::after,
+.popup-form-plus:hover::before {
+  background-color: #000000;
+}
+
+.popup-form-plus:active::after,
+.popup-form-plus:active::before {
+  background-color: #81b3d2;
+}
+
+.popup-form-plus::before {
+ content: "";
+ position: absolute;
+ display: block;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+ width: 3px;
+ height: 12px;
+ background-color: #a9a9a9;
+}
+
+.popup-form-plus::after {
+ content: "";
+ position: absolute;
+ display: block;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+ width: 12px;
+ height: 3px;
+ background-color: #a9a9a9;
+}
+
+.popup-form-minus {
+ position:relative;
+ width: 40px;
+ height: 40px;
+ border: 0;
+ padding: 0;
+ text-indent: -1000px;
+ overflow: hidden;
+ background-color: #f2f2f2;
+}
+
+.popup-form-minus::before {
+ content: "";
+ position: absolute;
+ display: block;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+ width: 12px;
+ height: 3px;
+ background-color: #a9a9a9;
+}
+
+.popup-form-minus:hover::after,
+.popup-form-minus:hover::before {
+  background-color: #000000;
+}
+
+.popup-form-minus:active::after,
+.popup-form-minus:active::before {
+  background-color: #81b3d2;
+}
 
 /* Catalog Page */
+
+li.site-navigation-active a {
+  color: #766357;
+}
+
+.filter-hotels {
+  background-image: url("../img/filter-background.jpg");
+  background-repeat: no-repeat;
+  background-position: 100% 60%;
+
+  color: #ffffff;
+}
 
 .filter-hotels legend {
   font-size: 16px;
   line-height: 21px;
-  color: #000000;
+  color: #ffffff;
   font-weight: bold;
+}
+
+input[type="checkbox"] {
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+input[checked] {
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+.button-form {
+  color: #ffffff;
+  background-color: transparent;
+}
+
+.filter-hotels input[type="text"] {
+  color: #ffffff;
+  background-color: transparent;
+}
+
+.sort-form {
+  list-style: none;
+}
+
+a.triangle-up {
+  border: 10px solid #ffffff;
+  border-bottom-color: #e5e5e5;
+  border-top-width: 0;
+  border-right-color: transparent;
+  border-left-color: transparent;
+}
+
+a.triangle-down {
+  border: 10px solid #ffffff;
+  border-top-color: #81b3d2;
+  border-bottom-width: 0;
+  border-right-color: transparent;
+  border-left-color: transparent;
+}
+
+a.triangle-up:hover{
+  border-bottom-color: #231f20;
+}
+
+a.triangle-down:hover {
+  border-top-color: #231f20;
+}
+
+a.triangle-up:active {
+  border-bottom-color: #81b3d2;
+}
+
+a.triangle-down:active {
+  border-top-color: #81b3d2;
 }
 
 .form-result-sort-title {
@@ -129,25 +442,87 @@ body {
 .sort-form {
   font-size: 12px;
   line-height: 18px;
-  color: #000000;
+  color: rgba(0, 0, 0, 0.3);
   font-weight: normal;
-  opacity: 0.3;
+}
+
+.sort-form a {
+  font-size: 12px;
+  line-height: 18px;
+  color: rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+  border-bottom: 1px dotted #81b3d2;
+}
+
+.sort-form a:hover {
+  color: #81b3d2;
+}
+
+.sort-form a:active {
+  color: #000000;
+  border-bottom: 1px dotted transparent;
+}
+
+a.sort-form-active {
+  font-size: 12px;
+  line-height: 18px;
+  color: #81b3d2;
+  text-decoration: none;
+  border-bottom: none;
+}
+
+.form-result-hotels {
+  border-top: 1px solid #e5e5e5;
 }
 
 .form-result-hotels-info > h3 {
   line-height: 26px;
 }
 
-.form-result-hotels-button-blue {
-  color: #ffffff;
-  font-weight: bold;
+a.link-h3 {
+  color: rgba(0, 0, 0, 1);
+  text-decoration: none;
 }
 
-.form-result-hotels-button-brown {
+a.link-h3:hover {
+  color: #81b3d2;
+}
+
+a.link-h3:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+a.form-result-hotels-button-blue {
   color: #ffffff;
   font-weight: bold;
+  background-color: #81b3d2;
+}
+
+a.form-result-hotels-button-blue:hover {
+  background-color: #669ec0;
+}
+
+a.form-result-hotels-button-blue:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #5496bd;
+}
+
+a.form-result-hotels-button-brown {
+  color: #ffffff;
+  font-weight: bold;
+  background-color: #766357;
+}
+
+a.form-result-hotels-button-brown:hover {
+  background-color: #604e43;
+}
+
+a.form-result-hotels-button-brown:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;
 }
 
 .form-result-hotels-rating {
   color: #666666;
+  background-color: #f2f2f2;
 }
