--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,19 @@
 @font-face {
-  font-family: 'PT Sans';
-  src: url('../fonts/ptsans.woff2') format('woff2'),
-       url('../fonts/ptsans.woff') format('woff');
+  font-family: "PT Sans";
+  src:
+    local('PT Sans'),
+    local('PTSans-Regular'),
+    url('../fonts/ptsans.woff2') format('woff2'),
+    url('../fonts/ptsans.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: ''PT Sans';
-  src: url('../fonts/ptsansbold.woff2') format('woff2'),
-       url('../fonts/ptsansbold.woff') format('woff');
+  font-family: "PT Sans";
+  src:
+    url('../fonts/ptsansbold.woff2') format('woff2'),
+    url('../fonts/ptsansbold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
@@ -19,9 +23,8 @@ html {
           box-sizing: border-box;
 }
 
-, :before, *:after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
@@ -29,7 +32,7 @@ body {
   line-height: 21px;
   color: #333333;
   font-weight: normal;
-  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
   width: 1200px;
 }
