--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "PT Sans";
   src:
-    local('PT Sans'),
-    local('PTSans-Regular'),
-    url('../fonts/ptsans.woff2') format('woff2'),
-    url('../fonts/ptsans.woff') format('woff');
+    local("PT Sans"),
+    local("PTSans-Regular"),
+    url("../fonts/ptsans.woff2") format("woff2"),
+    url("../fonts/ptsans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -12,9 +12,11 @@
 @font-face {
   font-family: "PT Sans";
   src:
-    url('../fonts/ptsansbold.woff2') format('woff2'),
-    url('../fonts/ptsansbold.woff') format('woff');
-  font-weight: 700;
+    local("PT Sans"),
+    local("PTSans-Bold"),
+    url("../fonts/ptsansbold.woff2") format("woff2"),
+    url("../fonts/ptsansbold.woff") format("woff");
+  font-weight: bold;
   font-style: normal;
 }
 
@@ -36,6 +38,41 @@ body {
   text-transform: uppercase;
   width: 1200px;
 }
+
+.container {
+  padding: 0 20px;
+}
+
+.main-header {
+  /* height: 56px; */
+
+  /* Временно */
+  background-color: #4be32d;
+}
+
+.main-navigation {
+  display: flex;
+  align-items: center;
+}
+
+.main-header-logo {
+  width: 138px;
+  height: 70px;
+}
+
+.site-navigation {
+  font-size: 14px;
+  line-height: 26px;
+  color: #000000;
+  font-weight: bold;
+
+  list-style: none;
+
+  padding: 0;
+  margin: 0;
+}
+
+
 
 .main-content h1 {
   font-size: 32px;
@@ -130,7 +167,6 @@ body {
 
 /* Main Page */
 
-.site-navigation,
 .popup-form {
   font-size: 14px;
   line-height: 26px;
