--- a/css/style.css
+++ b/css/style.css
@@ -73,24 +73,27 @@ body {
 }
 
 .container {
-
+  margin: 0 auto;
 }
 
 /* Header */
 
 .main-header {
-  /* height: 56px; */
+  /*height: 56px;*/
+  margin-top: -6px;
 
+  padding: 0;
 
 }
 
 .main-navigation {
   display: flex;
-  justify-content: space-around;
+  /*justify-content: space-around;*/
   align-items: center;
   width: 1200px;
-  height: 56px;
+  /*height: 56px;*/
   padding: 0;
+  margin: 0;
 }
 
 .main-header-logo {
