--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,9 @@ body {
   font-weight: normal;
   font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
-  width: 1200px;
-  margin: 0 40px;
+  min-width: 1200px;
+  width: 100%;
+  background-color: #f2f2f2;
 }
 
 .main-content h1 {
@@ -73,37 +74,43 @@ body {
 }
 
 .container {
+  width: 1200px;
   margin: 0 auto;
+  background-color: #ffffff;
+
+  box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
 }
 
 /* Header */
 
 .main-header {
-  /*height: 56px;*/
-  margin-top: -6px;
-
-  padding: 0;
+position: relative;
 
 }
 
 .main-navigation {
   display: flex;
-  /*justify-content: space-around;*/
+  justify-content: space-between;
   align-items: center;
+
   width: 1200px;
-  /*height: 56px;*/
-  padding: 0;
+  min-height: 56px;
+  padding: 0 72px;
   margin: 0;
+
 }
 
 .main-header-logo {
   width: 138px;
   height: 70px;
-  padding-top: 6px;
-  display: block;
-  position: relative;
-  z-index: 2;
+  /*display: block;
+  position: absolute;*/
+  top: 0;
+  left: 532px;
 
+  z-index: 1;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .site-navigation {
@@ -111,20 +118,23 @@ body {
   line-height: 26px;
   color: #000000;
   font-weight: bold;
-
   list-style: none;
 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   padding: 0;
   margin: 0;
+  width: 531px;
 }
+
+/*
+.site-navigation-right {
+  justify-content: flex-start-end;
+}*/
 
 .site-navigation li {
-  display: inline;
-  margin: 0 70px;
-}
-
-.site-navigation li:first-child {
-  margin-right: 80px;
+  width: 240px;
 }
 
 .site-navigation a {
@@ -149,6 +159,20 @@ body {
 .main-footer {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  width: 1200px;
+  height: 121px;
+  margin: 0;
+  padding: 42px 0;
+  box-sizing: border-box;
+  background-color: #fefefe;
+}
+
+.container .main-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .main-footer-hashtag {
@@ -228,28 +252,53 @@ body {
 }
 
 .banner {
-  position: relative;
-
+  margin-bottom: 55px;
 }
 
 .features-header {
+  text-align: center;
+  padding: 0 335px;
+  margin-bottom: 51px;
 
+}
+
+.features-header-title {
+  margin-bottom: 27px;
 }
 
 .features-row1 {
   display: flex;
   height: 256px;
   padding: 0;
+  padding-bottom: 0px;
   margin: 0;
+  margin-bottom: 4px;
 
 }
 
+.features-content {
+  text-align: center;
+  padding-top: 25px;
+}
+
+.features-content-title {
+  padding: 0 120px;
+  padding-bottom: 3px;
+}
+
+.features-content-text {
+  padding-right: 46px;
+  padding-left: 46px;
+  padding-top: 7px;
+}
 
 .features-list {
   display: flex;
   justify-content: space-around;
 
   list-style: none;
+
+  padding-left: 0;
 
 }
 
@@ -260,14 +309,16 @@ li.features-item {
 }
 
 .features-row2 li {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 100px;
-  padding-bottom: 170px;
+  padding-right: 14px;
+  padding-left: 14px;
+  padding-top: 80px;
+  padding-bottom: 132px;
 }
 
 .features-row2 {
   padding: 40px 0;
+  padding-bottom: 46px;
+  margin: 0;
 
 }
 
@@ -297,24 +348,30 @@ li.features-item {
 
 .features-row3 {
   background-color: #eeeeee;
-  margin-top: -15px;
+  margin-top: -28px;
 }
 
 .features-row3 li {
   width: 260px;
   text-align: center;
-
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 0;
+  padding-left: 0;
   padding-top: 40px;
-  padding-bottom: 20px;
+  padding-bottom: 46px;
 
 }
 
 .features-item h3 {
-  padding: 0 30px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 0;
+  padding-bottom: 2px;
 }
 
+.features-item-dop {
+  padding-top: 6px;
+
+}
 
 .features-header-title,
 .main-footer-hashtag {
@@ -354,34 +411,41 @@ li.features-item {
 
 
 
-
 .popup-search {
   display: flex;
   flex-direction: column;
   align-items: center;
 
   text-align: center;
+  margin: 0 auto;
+  padding-top: 11px;
+
 
   position: relative;
 }
 
-/*
-.popup-search-header {
+
+.popup-search-header p {
   text-align: center;
 }
-*/
+
 
 .popup-search-text {
   font-size: 14px;
   line-height: 24px;
+
+  margin-bottom: 47px;
 }
 
 .button-popup-search {
+  font-family: inherit;
   font-size: 21px;
   line-height: 26px;
   color: rgba(255, 255, 255, 1);
   font-weight: bold;
+  text-transform: uppercase;
   width: 568px;
+  padding: 30px 0;
 
   background-color: #766357;
   border: 0;
@@ -398,17 +462,102 @@ li.features-item {
   color: #000000;
   font-weight: bold;
   width: 568px;
-  padding: 40px;
+  padding-top: 40px;
+  padding-bottom: 55px;
+  padding-left: 55px;
+  padding-right: 55px;
   background-color: #ffffff;
   list-style: none;
 
   position: absolute;
-  top: 170px;
+  top: 100%;
+  box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+}
+
+.popup-form-checkin,
+.popup-form-checkout {
+  display: flex;
+	justify-content: space-between;
+  align-items: center;
+
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.popup-form-checkin button,
+.popup-form-checkout button {
+  position: absolute;
+  right: 3px;
+  top: 6px;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+.popup-form-checkin input,
+.popup-form-checkout input {
+	box-sizing: border-box;
+	width: 347px;
+	height: 38px;
+	padding-right: 12px;
+	padding-left: 12px;
+}
+
+.popup-form-checkin label,
+.popup-form-checkout label {
+  margin-right: 18px;
+}
+
+.popup-form-calendar {
+  border: none;
+}
+
+.icon-calendar path {
+  fill: #a9a9a9;
+}
+
+.icon-calendar path:hover {
+  fill: #000000;
+}
+
+.icon-calendar path:active {
+  fill: #81b3d2;
+}
+
+.popup-form-quantity {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.popup-form-quantity p {
+  margin: 0;
+}
+
+.popup-form-quantity-adults,
+.popup-form-quantity-children {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popup-form-quantity-adults label {
+  padding-right: 40px;
+}
+
+.popup-form-quantity-children label {
+  padding-right: 27px;
 }
 
 .popup-form-input {
   background-color: #f2f2f2;
   border: 1px solid transparent;
+
+  width: 38px;
+  height: 38px;
+  margin: 0;
 }
 
 .popup-form-input:hover{
@@ -422,8 +571,8 @@ li.features-item {
 
 .popup-form-plus {
  position:relative;
- width: 40px;
- height: 40px;
+ width: 38px;
+ height: 38px;
  border: 0;
  padding: 0;
  text-indent: -1000px;
@@ -445,11 +594,13 @@ li.features-item {
  content: "";
  position: absolute;
  display: block;
- top: 50%;
+ top: 13.5px;
+ left: 18px;
+ /*top: 50%;
  left: 50%;
- transform: translate(-50%,-50%);
+ transform: translate(-50%,-50%);*/
  width: 3px;
- height: 12px;
+ height: 11px;
  background-color: #a9a9a9;
 }
 
@@ -457,18 +608,20 @@ li.features-item {
  content: "";
  position: absolute;
  display: block;
- top: 50%;
+ top: 18px;
+ left: 14px;
+ /*top: 50%;
  left: 50%;
- transform: translate(-50%,-50%);
- width: 12px;
+ transform: translate(-50%,-50%);*/
+ width: 11px;
  height: 3px;
  background-color: #a9a9a9;
 }
 
 .popup-form-minus {
  position:relative;
- width: 40px;
- height: 40px;
+ width: 38px;
+ height: 38px;
  border: 0;
  padding: 0;
  text-indent: -1000px;
@@ -480,9 +633,11 @@ li.features-item {
  content: "";
  position: absolute;
  display: block;
- top: 50%;
+ top: 18px;
+ left: 14px;
+ /*top: 50%;
  left: 50%;
- transform: translate(-50%,-50%);
+ transform: translate(-50%,-50%);*/
  width: 12px;
  height: 3px;
  background-color: #a9a9a9;
@@ -499,12 +654,16 @@ li.features-item {
 }
 
 .popup-search-btn {
+  font-family: inherit;
   font-size: 21px;
   line-height: 26px;
   color: #ffffff;
   font-weight: bold;
+  text-transform: uppercase;
   width: 100%;
-  padding: 22px 0;
+  height: 58px;
+  padding: 14px 0;
+  margin-top: 54px;
   background-color: #81b3d2;
   border: 0;
 }
