--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ html {
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
@@ -78,7 +79,9 @@ body {
   margin: 0 auto;
   background-color: #ffffff;
 
-  box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+
+          box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
 
   position: relative;
 }
@@ -93,13 +96,17 @@ body {
 }
 
 .main-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 
   width: 1200px;
-  /*min-height: 56px;*/
-  /*padding: 0 72px;*/
   margin: 0;
 
 }
@@ -107,7 +114,6 @@ body {
 .main-header-logo {
   width: 138px;
   height: 70px;
-  /*display: block;*/
   position: absolute;
   top: 0;
   left: 50%;
@@ -124,9 +130,16 @@ body {
   font-weight: bold;
   list-style: none;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   padding: 0;
   margin: 0;
   /*width: 531px;*/
@@ -134,7 +147,8 @@ body {
 }
 
 .site-navigation li {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 240px;
   text-align: center;
   padding-left: 20px;
@@ -146,6 +160,11 @@ body {
 .site-navigation a {
   text-decoration: none;
   color: #000000;
+}
+
+.site-navigation a.main-navigation-active {
+  color: #766357;
+  pointer-events: none;
 }
 
 .site-navigation a:hover {
@@ -171,15 +190,28 @@ body {
 /* ---------- Footer ---------- */
 
 .main-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 1200px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
 
   margin: 0;
-  padding: 25px 100px;
   padding-left: 132px;
-  box-sizing: border-box;
+  padding-right: 80px;
+  padding-top: 22px;
+  padding-bottom: 23px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: rgba(255, 255, 255, 0.9);
   position: absolute;
   bottom: 0;
@@ -189,11 +221,38 @@ body {
   position: static;
 }
 
+.container-inner-page .main-footer > .main-footer-hashtag {
+  margin-top: 10px;
+  margin-bottom: 13px;
+}
+
 .main-footer-hashtag {
   font-size: 21px;
   line-height: 21px;
   color: #000000;
   font-weight: bold;
+  width: 400px;
+  margin: auto;
+  margin-right: 155px;
+  margin-top: 8px;
+  margin-bottom: 15px;
+}
+
+.footer-copyright {
+  width: 370px;
+  margin-right: auto;
+
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .footer-copyright-text {
@@ -201,23 +260,30 @@ body {
   line-height: 26px;
   color: #000000;
   font-weight: normal;
-
-  display: flex;
-  align-items: center;
 }
 
 .developer-logo-link {
   margin-left: 8px;
 }
 
+.main-footer-social {
+  width: 400px;
+  margin: auto;
+  margin-right: 140px;
+}
+
 .main-footer-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 156px;
   height: 45px;
-  margin-right: 10px;
-  margin-left: 35px;
+  /*margin-left: 35px;*/
   margin-bottom: 17px;
   padding: 0;
   list-style: none;
@@ -230,10 +296,19 @@ body {
 
 .social-button {
   background-color: #81b3d2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 46px;
   height: 48px;
   background-color: #81b3d2;
@@ -306,14 +381,14 @@ body {
 /* ---------- Main Page ---------- */
 
 .banner {
-  margin-bottom: 55px;
+  margin-bottom: 54px;
   position: relative;
 }
 
 .features-header {
   text-align: center;
   padding: 0 335px;
-  margin-bottom: 50px;
+  margin-bottom: 54px;
 }
 
 .features-header-title {
@@ -322,17 +397,20 @@ body {
 
 .features-row1,
 .features-row4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 256px;
   padding: 0;
-  padding-bottom: 0px;
   margin: 0;
 }
 
 .features-row1::after {
   content: "";
   display: block;
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   width: 67%;
   min-height: 256px;
 
@@ -340,7 +418,7 @@ body {
   background-image: url("../img/town-view.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 50% 54%;
 }
 
 .features-row4::before {
@@ -353,7 +431,8 @@ body {
   background-image: url("../img/devil-bridge.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 50% 53%;
+
 }
 
 
@@ -375,9 +454,13 @@ body {
 }
 
 .features-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 
   list-style: none;
 
@@ -406,6 +489,8 @@ li.features-item {
   padding-left: 0;
   padding-right: 0;
   margin: 0;
+-webkit-box-sizing: border-box;
+        box-sizing: border-box;
 
 }
 
@@ -495,6 +580,11 @@ li.features-item {
   color: #ffffff;
 }
 
+.map-img {
+  display: block;
+  width: 1200px;
+  height: 594px;
+}
 
 
 /* ---------- Main Page end---------- */
@@ -503,9 +593,16 @@ li.features-item {
 /* ---------- Popup Form ---------- */
 
 .popup-search {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 
   text-align: center;
   margin: 0 auto;
@@ -536,6 +633,7 @@ li.features-item {
   text-transform: uppercase;
   width: 568px;
   padding: 30px 0;
+  padding-bottom: 32px;
 
   background-color: #766357;
   border: 0;
@@ -565,7 +663,9 @@ li.features-item {
 
   position: absolute;
   top: 100%;
-  box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  left: 316px;
+  -webkit-box-shadow: 0 6px 17px rgba(0, 1, 1, 0.2);
+          box-shadow: 0 6px 17px rgba(0, 1, 1, 0.2);
 }
 
 
@@ -573,9 +673,15 @@ li.features-item {
 
 .popup-form-checkin,
 .popup-form-checkout {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-	justify-content: space-between;
-  align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 
   position: relative;
   margin-bottom: 30px;
@@ -595,7 +701,8 @@ li.features-item {
 
 .popup-form-checkin input,
 .popup-form-checkout input {
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	width: 347px;
 	height: 38px;
 	padding-right: 12px;
@@ -646,9 +753,14 @@ li.features-item {
 }
 
 .popup-form-quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .popup-form-quantity p {
@@ -657,9 +769,14 @@ li.features-item {
 
 .popup-form-quantity-adults,
 .popup-form-quantity-children {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .popup-form-quantity-adults label {
@@ -693,6 +810,14 @@ li.features-item {
   background-color: #ffffff;
   border-color: #f2f2f2;
   outline: none;
+}
+
+.popup-form-input::-webkit-input-placeholder {
+  color: #000000;
+}
+
+.popup-form-input:-ms-input-placeholder {
+  color: #000000;
 }
 
 .popup-form-input::placeholder {
@@ -790,7 +915,7 @@ li.features-item {
   text-transform: uppercase;
   width: 100%;
   height: 58px;
-  padding: 14px 0;
+  padding: 15px 0;
   margin-top: 54px;
   background-color: #81b3d2;
   border: 0;
@@ -829,9 +954,14 @@ li.site-navigation-active a {
 }
 
 .filter-hotels-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  padding: 28px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  /*padding: 28px 0;*/
+  padding-top: 28px;
 }
 
 .filter-hotels-form fieldset {
@@ -841,8 +971,15 @@ li.site-navigation-active a {
   margin: 0;
   border: none;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .filter-hotels legend {
@@ -862,8 +999,15 @@ li.site-navigation-active a {
   border: none;
   list-style: none;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .filter-hotels-form-option li {
@@ -872,7 +1016,8 @@ li.site-navigation-active a {
 
 .filter-hotels-form-label {
   position: relative;
-  padding-left: 40px;
+  padding-left: 41px;
+  vertical-align: middle;
 }
 
 .filter-hotels-form-label::before {
@@ -881,6 +1026,8 @@ li.site-navigation-active a {
   position: absolute;
   width: 27px;
   height: 23px;
+  top: -2px;
+  left: 0;
   background-image: url("../img/checkbox-off.svg");
   background-size: 23px 23px;
   background-position: left top;
@@ -894,13 +1041,13 @@ li.site-navigation-active a {
 
 
 .filter-range {
-  width: 330px;
+  width: 33%;
+  max-width: 320px;
+  padding: 0;
+  margin-left: auto;
 
   color: #ffffff;
   text-transform: uppercase;
-
-  margin-left: auto;
-  padding-left: 13px;
 }
 
 .filter-range-title {
@@ -933,7 +1080,9 @@ li.site-navigation-active a {
   height: 22px;
 
   background: #ffffff;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .price-controls label {
@@ -950,6 +1099,7 @@ li.site-navigation-active a {
 .price-controls .max-price {
   min-width: 90px;
   padding-left: 65px;
+  text-align: center;
 }
 
 .price-controls input {
@@ -992,12 +1142,16 @@ li.site-navigation-active a {
   background: #ababab;
   border: 8px solid #ffffff;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(171, 171, 171, 0.2);
+          box-shadow: 0 2px 1px 0 rgba(171, 171, 171, 0.2);
   cursor: pointer;
 }
 
 .range-toggle:hover {
-  background: #1c4f80;
+  top: -10px;
+  width: 22px;
+  height: 22px;
+  border: 9px solid #ffffff;
 }
 
 .range-toggle-min {
@@ -1012,6 +1166,7 @@ li.site-navigation-active a {
   display: block;
   margin: 0 auto;
   padding: 6px 32px;
+  width: 138px;
 
   font-size: 14px;
   line-height: 20px;
@@ -1037,8 +1192,12 @@ li.site-navigation-active a {
 
 
 .form-result-sort {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 11px;
   padding-bottom: 12px;
   padding-left: 72px;
@@ -1071,6 +1230,10 @@ li.site-navigation-active a {
   color: rgba(0, 0, 0, 0.3);
   font-weight: normal;
   list-style: none;
+
+  display: -webkit-box;
+
+  display: -ms-flexbox;
 
   display: flex;
 
@@ -1113,8 +1276,12 @@ a.sort-form-active {
   display: flex;
   width: 34px;
   height: 18px;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   list-style: none;
   margin: 0;
   margin-left: auto;
@@ -1143,11 +1310,11 @@ a.sort-form-active {
 
 
 
-.form-result {
 
-}
 
 .form-result-hotels {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid #e5e5e5;
   padding-top: 30px;
@@ -1165,9 +1332,16 @@ a.sort-form-active {
 }
 
 .form-result-hotels-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-bottom: 5px;
 }
 
@@ -1199,6 +1373,7 @@ a.sort-form-active {
   text-align: center;
   vertical-align: middle;
   margin-bottom: 1px;
+  text-decoration: none;
 }
 
 a.link-h3 {
@@ -1247,11 +1422,38 @@ a.form-result-hotels-button-brown:active {
 .form-result-hotels-stars {
   margin-left: auto;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
+
+.stars {
+  text-align: right;
+}
+
+.icon-star {
+  display: inline-block;
+  width: 20px;
+  height: 17px;
+  background-image: url("../img/star.svg");
+  background-repeat: no-repeat;
+  margin-bottom: 40px;
+  padding: 0;
+
+}
+
 
 .form-result-hotels-rating {
   color: #666666;
@@ -1262,8 +1464,6 @@ a.form-result-hotels-button-brown:active {
   padding-top: 3px;
   padding-left: 2px;
   margin: 0;
-  margin-bottom: 5px;
-
 }
 
 /* ---------- Catalog Page end ---------- */
